update baseurl following netlify publish

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
-baseURL = "http://localhost:1313"
+baseURL = "https://colinbledsoe.netlify.app/"
+testURL = "http://localhost:1313"
 languageCode = "en-us"
 title = "ColinBledsoe"
 theme = "hugo-geekblog"
